=== What's New in 2.5 Since 2.4

This section covers the changes made from version 2.4 to version 2.5.
For changes in earlier version, see <<history>>.

Also see <<new-in-sik>>.

[[x25-kafka-client]]
==== Kafka Client Version

This version requires the 2.5.0 `kafka-clients`.

[[x25-delivery]]
==== Delivery Attempts Header

There is now an option to to add a header which tracks delivery attempts when using certain error handlers and after rollback processors.
See <<delivery-header>> for more information.

[[x25-message-return]]
==== @KafkaListener Changes

Default reply headers will now be populated automatically if needed when a `@KafkaListener` return type is `Message<?>`.
See <<reply-message>> for more information.

The `KafkaHeaders.RECEIVED_MESSAGE_KEY` is no longer populated with a `null` value when the incoming record has a `null` key; the header is omitted altogether.

[[x25-container]]
==== Listener Container Changes

The `assignmentCommitOption` container property is now `LATEST_ONLY_NO_TX` by default.
See <<container-props>> for more information.

The `subBatchPerPartition` container property is now `true` by default when using transactions.
See <<transactions>> for more information.

A new `RecoveringBatchErrorHandler` is now provided.
See <<recovering-batch-eh>> for more information.

Static group membership is now supported.
See <<message-listener-container>> for more information.

When incremental/cooperative rebalancing is configured, if offsets fail to commit with a non-fatal `RebalanceInProgressException`, the container will attempt to re-commit the offsets for the partitions that remain assigned to this instance after the rebalance is completed.

The default error handler is now the `SeekToCurrentErrorHandler` for record listeners and `RecoveringBatchErrorHandler` for batch listeners.
See <<error-handlers>> for more information.

[[x25-template]]
==== KafkaTemplate Changes

The `KafkaTemplate` can now maintain micrometer timers.